Confirmed link fix for index.html

--- a/campus shop.html
+++ b/campus shop.html
@@ -62,7 +62,7 @@
                     <span class="text-xl font-bold text-blue-900">Campus Collective</span>
                 </div>
                 <div class="hidden md:flex space-x-8 items-center">
-                    <a href="home.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
+                    <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
                     <a href="cart.html" class="text-gray-700 hover:text-blue-600 font-medium">🛒 Cart</a>
                     <div id="authArea" class="flex items-center gap-4">
                         <a href="customer-login.html" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Login</a>
@@ -93,7 +93,7 @@
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
-                <p><a href="home.html" class="hover:text-orange-400">Home</a></p>
+                <p><a href="index.html" class="hover:text-orange-400">Home</a></p>
                 <p><a href="campus shop.html" class="hover:text-orange-400">Shop</a></p>
             </div>
             <div class="footer-section">
