--- a/checkout-form.html
+++ b/checkout-form.html
@@ -166,7 +166,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section"><h3>About Us</h3><p>Campus Collective Shop is your dedicated marketplace for student essentials.</p></div>
-            <div class="footer-section"><h3>Quick Links</h3><p><a href="home.html">Home</a><br><a href="campus shop.html">Shop</a></p></div>
+            <div class="footer-section"><h3>Quick Links</h3><p><a href="index.html">Home</a><br><a href="campus shop.html">Shop</a></p></div>
             <div class="footer-section"><h3>Contact Us</h3><p>Email: support@campuscollective.co.za</p></div>
         </div>
         <div class="footer-bottom">&copy; 2025 Campus Collective. All Rights Reserved.</div>
@@ -197,7 +197,7 @@
                 
                 // Clear cart and redirect
                 localStorage.removeItem('cart');
-                window.location.href = 'home.html';
+                window.location.href = 'index.html';
             }, 3000); // 3-second delay to show off the loader
         });
 
