--- a/czra contact.html
+++ b/czra contact.html
@@ -117,7 +117,7 @@
 <body style="background-image: url(Images/Campus\ collective\ logo\ origin.jpg);background-size: cover;background-position: center;background-attachment: fixed;">
      <nav class="navbar">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="apply at uni.html">Apply@Universities</a></li>
                 <li><a href="czra more about us.html">About Us</a></li>
                 <li><a href="czra contact.html">Contact</a></li>
