--- a/czra more about us.html
+++ b/czra more about us.html
@@ -122,7 +122,7 @@
         <nav class="navbar">
          
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="apply at uni.html">Apply@Universities</a></li>
                 <li><a href="czra more about us.html">About Us</a></li>
                 <li><a href="czra contact.html">Contact</a></li>
