--- a/join us.html
+++ b/join us.html
@@ -118,7 +118,7 @@ p {
         <nav class="navbar">
          
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="apply at uni.html">Apply@Universities</a></li>
                 <li><a href="czra more about us.html">About Us</a></li>
                 <li><a href="czra contact.html">Contact</a></li>
