--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,183 +6,227 @@
     <title> CAMPUS COLLECTIVE</title>
     <link rel="icon" type="image/x-icon" href="Images/campus collective icon.ico">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        :root {
+            --glass: rgba(255, 255, 255, 0.85);
+            --glass-border: rgba(255, 255, 255, 0.4);
+            --primary: #1a1a1a;
+            --accent: #ffcc00;
+            --radius: 20px;
+        }
+
+        * {
+            box-sizing: border-box;
             margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            min-height: 100vh;
             background-size: cover;
             background-position: center;
-            background-attachment: fixed; /* Keeps background steady */
+            background-attachment: fixed;
             animation: slideshow 42s infinite;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        /* Keep your existing @keyframes slideshow here */
+        /* Slideshow Animation */
         @keyframes slideshow {
-            0% { background-image: url('Images/ump 1.jpg'); }
-            14.28% { background-image: url('Images/ump 1.jpg'); }
-            14.29% { background-image: url('Images/ump 3.jpg'); }
-            28.56% { background-image: url('Images/ump 3.jpg'); }
-            28.57% { background-image: url('Images/ump bld6.jpg'); }
-            42.84% { background-image: url('Images/ump bld6.jpg'); }
-            42.85% { background-image: url('Images/ump caf 2.jpg'); }
-            57.12% { background-image: url('Images/ump caf 2.jpg'); }
-            57.13% { background-image: url('Images/ump gate.jpg'); }
-            71.4% { background-image: url('Images/ump gate.jpg'); }
-            71.41% { background-image: url('Images/university-student-accommodation.jpg'); }
-            85.68% { background-image: url('Images/university-student-accommodation.jpg'); }
-            85.69% { background-image: url('Images/cecil.jpg'); }
-            100% { background-image: url('Images/cecil.jpg'); }
+            0%, 14.28% { background-image: url('Images/ump 1.jpg'); }
+            14.29%, 28.56% { background-image: url('Images/ump 3.jpg'); }
+            28.57%, 42.84% { background-image: url('Images/ump bld6.jpg'); }
+            42.85%, 57.12% { background-image: url('Images/ump caf 2.jpg'); }
+            57.13%, 71.4% { background-image: url('Images/ump gate.jpg'); }
+            71.41%, 85.68% { background-image: url('Images/university-student-accommodation.jpg'); }
+            85.69%, 100% { background-image: url('Images/cecil.jpg'); }
         }
 
-        .container {
-            width: 90%; /* Responsive width */
-            max-width: 1100px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9); /* Slightly more solid for readability */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            box-sizing: border-box;
-        }
-
-        .logo {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .logo img {
-            max-width: 100%; /* Logo won't break screen */
-            height: auto;
-            width: 200px;
+        /* Sticky Pill Navigation */
+        nav {
+            position: sticky;
+            top: 20px;
+            z-index: 1000;
+            width: 90%;
+            max-width: 600px;
         }
 
         nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            background-color: #333;
-            border-radius: 10px;
+            background: var(--primary);
             display: flex;
-            flex-wrap: wrap; /* Allows menu to wrap on small screens */
-            justify-content: center;
+            justify-content: space-evenly;
+            padding: 10px;
+            border-radius: 50px;
+            list-style: none;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            overflow-x: auto;
+            scrollbar-width: none; /* Firefox */
         }
 
-        li {
-            margin: 5px;
-        }
+        nav ul::-webkit-scrollbar { display: none; } /* Chrome/Safari */
 
-        li a {
-            color: #fff;
+        nav li a {
+            color: white;
             text-decoration: none;
-            padding: 10px 15px;
-            display: block;
-            transition: background-color 0.3s ease;
+            font-size: 0.9rem;
+            font-weight: 600;
+            padding: 8px 15px;
+            border-radius: 25px;
+            transition: 0.3s;
+            white-space: nowrap;
         }
 
-        li a:hover {
-            background-color: #444;
-            border-radius: 10px;
+        nav li a:hover { background: rgba(255,255,255,0.2); }
+
+        /* Main Glass Container */
+        .container {
+            width: 92%;
+            max-width: 1100px;
+            margin: 40px auto;
+            padding: 40px 20px;
+            background: var(--glass);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: var(--radius);
+            box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+            text-align: center;
         }
 
+        .logo img {
+            width: 180px;
+            margin-bottom: 20px;
+            filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1));
+        }
+
+        h1 {
+            font-size: 2.2rem;
+            color: var(--primary);
+            margin-bottom: 30px;
+            letter-spacing: -1px;
+        }
+
+        /* Modern Grid Cards */
         .feature-cards-container {
-            display: flex;
-            justify-content: space-between;
-            gap: 20px;
-            margin-top: 40px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
+            margin-top: 20px;
         }
 
         .feature-card {
-            flex: 1; /* Equal width cards */
-            background-color: #f7f7f7;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-            text-align: center;
+            background: white;
+            padding: 30px;
+            border-radius: var(--radius);
+            text-align: left;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            border: 1px solid #f0f0f0;
         }
 
-        /* MOBILE FIXES */
-        @media (max-width: 768px) {
-            .feature-cards-container {
-                flex-direction: column; /* Stacks cards vertically */
-            }
-
-            .container {
-                width: 95%;
-                margin: 10px auto;
-            }
-
-            nav ul {
-                flex-direction: column; /* Stacks menu items */
-                text-align: center;
-            }
-
-            li {
-                width: 100%;
-                margin: 0;
-            }
-            
-            li a {
-                border-bottom: 1px solid #444;
-            }
+        .feature-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 12px 24px rgba(0,0,0,0.1);
         }
 
+        .feature-card h2 {
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+            color: var(--primary);
+        }
+
+        .feature-card p {
+            font-size: 1rem;
+            line-height: 1.6;
+            color: #555;
+            margin-bottom: 20px;
+        }
+
+        /* Premium Buttons */
         .card-button {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
+            background: var(--primary);
+            color: white;
             border: none;
-            border-radius: 10px;
+            padding: 15px;
+            border-radius: 12px;
+            font-weight: 700;
             cursor: pointer;
-            width: 100%; /* Easier to click on mobile */
-            transition: background-color 0.3s ease;
+            width: 100%;
+            transition: background 0.3s;
+            text-transform: uppercase;
+            font-size: 0.85rem;
         }
+
+        .card-button:hover { background: #333; }
 
         footer {
-            margin-top: 40px;
-            padding-bottom: 20px;
-            text-align: center;
-            color: #666;
+            margin-top: auto;
+            padding: 30px;
+            color: white;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Tweaks */
+        @media (max-width: 600px) {
+            h1 { font-size: 1.8rem; }
+            .container { padding: 30px 15px; }
+            nav { top: 10px; }
         }
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about us.html">About</a></li>
+            <li><a href="choose login.html">Login</a></li>
+            <li><a href="campus shop.html">Store</a></li>
+            <li><a href="Learn More.html">Accommodations</a></li>
+             <li><a href="apply at uni.html">Aplly @Universities</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
-        <div class="logo">
-            <img src="Images/Campus collective logo origin.jpg" alt="Comfort Zone Recruitment Agency Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="apply at uni.html">Apply@Universities</a></li>
-                <li><a href="czra more about us.html">About Us</a></li>
-                <li><a href="czra contact.html">Contact</a></li>
-                <li><a href="choose login.html">Login</a></li>
-                <li><a href="campus shop.html">Campus Store</a></li>
-                <li><a href="Learn More.html">Accomodations</a></li>
-            </ul>
-        </nav>
+        <header class="logo">
+            <img src="Images/Campus collective logo origin.jpg" alt="Campus Collective Logo">
+            <h1>Welcome to Campus Collective</h1>
+        </header>
+
         <main>
             <section class="feature-cards-container">
                 <div class="feature-card">
-                    <h2>Browse Listings</h2>
-                    <p>Explore a curated selection of student accommodations.</p>
-                    <a href="Learn More.html"><button class="card-button">View Accomodations</button></a>
+                    <div>
+                        <h2>Browse Listings</h2>
+                        <p>Explore a curated selection of student accommodations near your campus.</p>
+                    </div>
+                    <a href="Learn More.html"><button class="card-button">View Now</button></a>
                 </div>
+
                 <div class="feature-card">
-                    <h2>Join Us</h2>
-                    <p>If you are an Accomodation provider or business operater looking to work with us, you can register your business today!</p>
-                    <a href="join us.html"><button class="card-button">Register!</button></a>
+                    <div>
+                        <h2>Join Our Network</h2>
+                        <p>Business operator? Register your accommodation or service today.</p>
+                    </div>
+                    <a href="join us.html"><button class="card-button">Register</button></a>
                 </div>
+
                 <div class="feature-card">
-                    <h2>Visit Campus Shop</h2>
-                    <p>Get anything you may need in our campus shop, we offer goods and services offered by fellow students and others.</p>
-                   <a href="campus shop.html"> <button class="card-button">Visit Shop</button></a>
+                    <div>
+                        <h2>Campus Shop</h2>
+                        <p>Find essentials and services offered by fellow students in our store.</p>
+                    </div>
+                    <a href="campus shop.html"><button class="card-button">Visit Shop</button></a>
                 </div>
             </section>
         </main>
-        <footer>
-            <p>&copy; 2025 Campus Collective . All rights reserved.</p>
-        </footer>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Campus Collective. All rights reserved.</p>
+    </footer>
 </body>
-</html
+</html>
