--- a/index.html
+++ b/index.html
@@ -7,32 +7,25 @@
     <link rel="icon" type="image/x-icon" href="Images/campus collective icon.ico">
     <style>
         :root {
-            --glass: rgba(255, 255, 255, 0.85);
-            --glass-border: rgba(255, 255, 255, 0.4);
+            --glass: rgba(255, 255, 255, 0.95);
             --primary: #1a1a1a;
             --accent: #ffcc00;
             --radius: 20px;
         }
 
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', system-ui, sans-serif;
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
             animation: slideshow 42s infinite;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
-        /* Slideshow Animation */
         @keyframes slideshow {
             0%, 14.28% { background-image: url('Images/ump 1.jpg'); }
             14.29%, 28.56% { background-image: url('Images/ump 3.jpg'); }
@@ -43,190 +36,221 @@
             85.69%, 100% { background-image: url('Images/cecil.jpg'); }
         }
 
-        /* Sticky Pill Navigation */
+        /* --- NAVIGATION --- */
         nav {
-            position: sticky;
-            top: 20px;
-            z-index: 1000;
-            width: 90%;
-            max-width: 600px;
-        }
-
-        nav ul {
-            background: var(--primary);
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 70px;
+            background: rgba(0,0,0,0.85);
+            backdrop-filter: blur(10px);
             display: flex;
-            justify-content: space-evenly;
-            padding: 10px;
-            border-radius: 50px;
-            list-style: none;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-            overflow-x: auto;
-            scrollbar-width: none; /* Firefox */
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 5%;
+            z-index: 2000;
         }
 
-        nav ul::-webkit-scrollbar { display: none; } /* Chrome/Safari */
+        .nav-logo-text { color: white; font-weight: 800; letter-spacing: 1px; }
 
-        nav li a {
+        /* Desktop Menu: Visible by default */
+        .nav-links {
+            display: flex;
+            list-style: none;
+            gap: 20px;
+        }
+
+        .nav-links li a {
             color: white;
             text-decoration: none;
-            font-size: 0.9rem;
             font-weight: 600;
-            padding: 8px 15px;
-            border-radius: 25px;
+            font-size: 0.9rem;
             transition: 0.3s;
-            white-space: nowrap;
         }
 
-        nav li a:hover { background: rgba(255,255,255,0.2); }
+        .nav-links li a:hover { color: var(--accent); }
 
-        /* Main Glass Container */
+        /* Close Button (X) - Hidden on desktop */
+        .close-btn {
+            display: none;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 2rem;
+            color: white;
+            cursor: pointer;
+        }
+
+        /* Hamburger - Hidden on desktop */
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background: white;
+            border-radius: 5px;
+        }
+
+        /* --- MOBILE STYLES --- */
+        @media (max-width: 850px) {
+            .nav-links {
+                position: fixed;
+                top: 0;
+                right: -100%;
+                width: 70%;
+                height: 100vh;
+                background: var(--primary);
+                flex-direction: column;
+                padding: 100px 40px;
+                transition: 0.4s ease;
+                box-shadow: -10px 0 30px rgba(0,0,0,0.5);
+            }
+
+            .nav-links.active { right: 0; }
+            .hamburger { display: flex; }
+            .close-btn { display: block; }
+            .nav-links li { margin: 15px 0; border-bottom: 1px solid #333; padding-bottom: 10px; }
+            .nav-links li a { font-size: 1.1rem; }
+        }
+
+        /* --- CONTENT AREA --- */
+        .main-wrapper { flex: 1; padding-top: 100px; }
+
         .container {
             width: 92%;
-            max-width: 1100px;
-            margin: 40px auto;
+            max-width: 1000px;
+            margin: 0 auto 40px;
             padding: 40px 20px;
             background: var(--glass);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border: 1px solid var(--glass-border);
+            backdrop-filter: blur(10px);
             border-radius: var(--radius);
-            box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
             text-align: center;
         }
 
-        .logo img {
-            width: 180px;
+        .main-logo {
+            width: 180px; /* Decreased size as requested */
             margin-bottom: 20px;
-            filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1));
         }
 
-        h1 {
-            font-size: 2.2rem;
-            color: var(--primary);
-            margin-bottom: 30px;
-            letter-spacing: -1px;
-        }
+        h1 { font-size: 1.8rem; margin-bottom: 30px; color: #111; }
 
-        /* Modern Grid Cards */
         .feature-cards-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-            margin-top: 20px;
+            gap: 20px;
         }
 
         .feature-card {
             background: white;
-            padding: 30px;
-            border-radius: var(--radius);
+            padding: 25px;
+            border-radius: 15px;
             text-align: left;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            border: 1px solid #f0f0f0;
+            border: 1px solid #eee;
         }
 
-        .feature-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 24px rgba(0,0,0,0.1);
-        }
-
-        .feature-card h2 {
-            font-size: 1.5rem;
-            margin-bottom: 15px;
-            color: var(--primary);
-        }
-
-        .feature-card p {
-            font-size: 1rem;
-            line-height: 1.6;
-            color: #555;
-            margin-bottom: 20px;
-        }
-
-        /* Premium Buttons */
         .card-button {
             background: var(--primary);
             color: white;
             border: none;
-            padding: 15px;
-            border-radius: 12px;
-            font-weight: 700;
-            cursor: pointer;
+            padding: 14px;
+            border-radius: 10px;
             width: 100%;
-            transition: background 0.3s;
-            text-transform: uppercase;
-            font-size: 0.85rem;
+            margin-top: 15px;
+            font-weight: bold;
+            cursor: pointer;
         }
 
-        .card-button:hover { background: #333; }
-
+        /* --- FOOTER --- */
         footer {
-            margin-top: auto;
-            padding: 30px;
+            background: rgba(0,0,0,0.85);
             color: white;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-            font-size: 0.9rem;
-        }
-
-        /* Responsive Tweaks */
-        @media (max-width: 600px) {
-            h1 { font-size: 1.8rem; }
-            .container { padding: 30px 15px; }
-            nav { top: 10px; }
+            text-align: center;
+            padding: 20px;
+            margin-top: auto;
         }
     </style>
 </head>
 <body>
+
     <nav>
-        <ul>
+        <div class="nav-logo-text">CAMPUS COLLECTIVE</div>
+        
+        <ul class="nav-links" id="navLinks">
+            <span class="close-btn" id="closeBtn">&times;</span>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about us.html">About</a></li>
+            <li><a href="about us.html">About Us</a></li>
+            <li><a href="about us.html">Contact Us</a></li>
+            <li><a href="apply at uni.html">Aplly@Universities</a></li>
             <li><a href="choose login.html">Login</a></li>
-            <li><a href="campus shop.html">Store</a></li>
+            <li><a href="campus shop.html">Campus Shop</a></li>
             <li><a href="Learn More.html">Accommodations</a></li>
-             <li><a href="apply at uni.html">Aplly @Universities</a></li>
         </ul>
+
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
 
-    <div class="container">
-        <header class="logo">
-            <img src="Images/Campus collective logo origin.jpg" alt="Campus Collective Logo">
-            <h1>Welcome to Campus Collective</h1>
-        </header>
-
-        <main>
-            <section class="feature-cards-container">
+    <div class="main-wrapper">
+        <div class="container">
+            <img src="Images/Campus collective logo origin.jpg" alt="Logo" class="main-logo">
+            <h1>Find Your Home on Campus</h1>
+            <div class="feature-cards-container">
                 <div class="feature-card">
-                    <div>
-                        <h2>Browse Listings</h2>
-                        <p>Explore a curated selection of student accommodations near your campus.</p>
-                    </div>
+                    <h2>Browse Listings</h2>
+                    <p>Explore student accommodations near campus.</p>
                     <a href="Learn More.html"><button class="card-button">View Now</button></a>
                 </div>
-
                 <div class="feature-card">
-                    <div>
-                        <h2>Join Our Network</h2>
-                        <p>Business operator? Register your accommodation or service today.</p>
-                    </div>
+                    <h2>Join Our Network</h2>
+                    <p>Register your Accommodation and Business to reach students.</p>
                     <a href="join us.html"><button class="card-button">Register</button></a>
                 </div>
-
                 <div class="feature-card">
-                    <div>
-                        <h2>Campus Shop</h2>
-                        <p>Find essentials and services offered by fellow students in our store.</p>
-                    </div>
+                    <h2>Campus Shop</h2>
+                    <p>Essentials provided by fellow students.</p>
                     <a href="campus shop.html"><button class="card-button">Visit Shop</button></a>
                 </div>
-            </section>
-        </main>
+            </div>
+        </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 Campus Collective. All rights reserved.</p>
+        <p>&copy; 2025 Campus Collective. All rights reserved | Developed with 🧡 in SA.</p>
     </footer>
+
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const closeBtn = document.getElementById('closeBtn');
+        const navLinks = document.getElementById('navLinks');
+
+        // Open Menu
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.add('active');
+        });
+
+        // Close Menu via X button
+        closeBtn.addEventListener('click', () => {
+            navLinks.classList.remove('active');
+        });
+
+        // Close Menu by clicking outside
+        document.addEventListener('click', (event) => {
+            const isClickInsideMenu = navLinks.contains(event.target);
+            const isClickOnHamburger = hamburger.contains(event.target);
+
+            if (!isClickInsideMenu && !isClickOnHamburger && navLinks.classList.contains('active')) {
+                navLinks.classList.remove('active');
+            }
+        });
+    </script>
 </body>
 </html>
