Confirmed fix for index.html

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
         <ul class="nav-links" id="navLinks">
             <span class="close-btn" id="closeBtn">&times;</span>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about us.html">About Us</a></li>
-            <li><a href="about us.html">Contact Us</a></li>
-            <li><a href="apply at uni.html">Aplly@Universities</a></li>
+            <li><a href="czra more about us.html">About Us</a></li>
+            <li><a href="czra contact.html">Contact Us</a></li>
+            <li><a href="apply at uni.html">Apply@Universities</a></li>
             <li><a href="choose login.html">Login</a></li>
             <li><a href="campus shop.html">Campus Shop</a></li>
             <li><a href="Learn More.html">Accommodations</a></li>
