Confirmed fix for czra contact.html

--- a/czra contact.html
+++ b/czra contact.html
@@ -124,7 +124,7 @@
 
             <div class="social-media">
                 <p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61581821286904" target="_blank">Campus Collective</a></p>
-                <p><strong>Email:</strong> <a href="mailto:info@campuscollective.com">info@campuscollective.com</a></p>
+                <p><strong>Email:</strong> <a href="mailto:infomy@campuscollective.me">info@mycampuscollective.me</a></p>
             </div>
         </div>
     </div>
