--- a/campus shop.html
+++ b/campus shop.html
@@ -98,7 +98,8 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Us</h3>
-                <p>Email: support@campuscollective.co.za</p>
+                <p><strong>Call:</strong> <a href="tel:0774377288">0774377288</a></p>
+                <p><strong>Email:</strong> <a href="mailto:infomy@campuscollective.me">info@mycampuscollective.me</a></p>
             </div>
         </div>
         <div class="footer-bottom">&copy; 2025 Campus Collective. All Rights Reserved.</div>
