--- a/campus shop.html
+++ b/campus shop.html
@@ -99,7 +99,7 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <p><strong>Call:</strong> <a href="tel:0774377288">0774377288</a></p>
-                <p><strong>Email:</strong> <a href="mailto:infomy@campuscollective.me">info@mycampuscollective.me</a></p>
+                <p><strong>Email:</strong> <a href="mailto:info@mycampuscollective.me">info@mycampuscollective.me</a></p>
             </div>
         </div>
         <div class="footer-bottom">&copy; 2025 Campus Collective. All Rights Reserved.</div>
