--- a/Learn More.html
+++ b/Learn More.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200">
     <title>Accommodations | Campus Collective</title>
     <link rel="icon" type="image/x-icon" href="Images/campus collective icon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap">
@@ -26,9 +26,11 @@
             background-attachment: fixed;
             animation: slideshow 42s infinite;
             padding-top: 100px;
+            /* Forces the body to maintain desktop width */
+            width: 1200px;
+            margin: 0 auto;
         }
 
-        /* Darkened Slideshow Background */
         @keyframes slideshow {
             0%, 14.28% { background-image: url('Images/ump 1.jpg'); }
             14.29%, 28.56% { background-image: url('Images/ump 3.jpg'); }
@@ -47,32 +49,18 @@
             z-index: -1;
         }
 
-        /* --- NAVIGATION --- */
+        /* --- NAVIGATION (Desktop Style) --- */
         nav {
-            position: fixed; top: 0; width: 100%; height: 70px;
+            position: fixed; top: 0; left: 50%; transform: translateX(-50%);
+            width: 1200px; height: 70px;
             background: rgba(0,0,0,0.95); backdrop-filter: blur(10px);
             display: flex; justify-content: space-between; align-items: center;
-            padding: 0 5%; z-index: 2000;
+            padding: 0 50px; z-index: 2000;
         }
 
         .nav-logo-text { color: white; font-weight: 800; }
         .nav-links { display: flex; list-style: none; gap: 15px; }
         .nav-links li a { color: white; text-decoration: none; font-weight: 600; font-size: 0.85rem; }
-        
-        .hamburger { display: none; cursor: pointer; flex-direction: column; gap: 5px; }
-        .hamburger span { width: 25px; height: 3px; background: white; }
-        .close-btn { display: none; position: absolute; top: 20px; right: 20px; font-size: 2rem; color: white; cursor: pointer; }
-
-        @media (max-width: 950px) {
-            .nav-links {
-                position: fixed; top: 0; right: -100%; width: 75%; height: 100vh;
-                background: var(--primary); flex-direction: column; padding: 100px 40px;
-                transition: 0.4s ease;
-            }
-            .nav-links.active { right: 0; }
-            .hamburger { display: flex; }
-            .close-btn { display: block; }
-        }
 
         /* --- SEARCH SECTION --- */
         .search-container {
@@ -85,13 +73,12 @@
         #search-bar { flex: 1; border: none; padding: 0 20px; outline: none; font-size: 1rem; background: transparent; }
         #search-btn { background: var(--accent); color: white; border: none; padding: 10px 25px; border-radius: 30px; cursor: pointer; font-weight: bold; }
 
-        /* --- RESPONSIVE GRID --- */
-        main { flex: 1; width: 95%; max-width: 1300px; margin: 0 auto; }
+        /* --- GRID (Locked to 3 Columns) --- */
+        main { flex: 1; width: 1100px; margin: 0 auto; }
         
         .accommodation-grid {
             display: grid;
-            /* Adaptive grid: will show more columns on desktop and 1 column on mobile */
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 25px;
             padding-bottom: 50px;
         }
@@ -99,12 +86,9 @@
         .accommodation {
             background: var(--glass); border-radius: var(--radius);
             overflow: hidden; box-shadow: 0 15px 30px rgba(0,0,0,0.4);
-            transition: 0.3s;
             display: flex;
             flex-direction: column;
         }
-
-        .accommodation:hover { transform: translateY(-10px); }
 
         .slideshow-container { position: relative; height: 220px; background: #eee; }
         .slideshow-container img {
@@ -124,15 +108,14 @@
             font-weight: bold; cursor: pointer; margin-top: auto;
         }
 
-        footer { background: rgba(0,0,0,0.9); color: white; text-align: center; padding: 20px; margin-top: auto; }
+        footer { background: rgba(0,0,0,0.9); color: white; text-align: center; padding: 20px; margin-top: auto; width: 1200px; }
     </style>
 </head>
 <body>
 
     <nav>
         <div class="nav-logo-text">CAMPUS COLLECTIVE</div>
-        <ul class="nav-links" id="navLinks">
-            <span class="close-btn" id="closeBtn">&times;</span>
+        <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="apply at uni.html">Apply@Universities</a></li>
             <li><a href="czra more about us.html">About Us</a></li>
@@ -140,7 +123,6 @@
             <li><a href="choose login.html">Login</a></li>
             <li><a href="campus shop.html">Store</a></li>
         </ul>
-        <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </nav>
 
     <h1 style="text-align: center; color: white; margin: 20px 0; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">Find Your Home</h1>
@@ -289,14 +271,8 @@
                 card.style.display = match ? 'flex' : 'none';
             });
         }
-
         searchBtn.onclick = performSearch;
         searchBar.oninput = performSearch;
-
-        // Mobile Menu
-        const hb = document.getElementById('hamburger'), menu = document.getElementById('navLinks'), cb = document.getElementById('closeBtn');
-        hb.onclick = () => menu.classList.add('active');
-        cb.onclick = () => menu.classList.remove('active');
     </script>
 </body>
 </html>
