confirmed changes for learn more.html

--- a/Learn More.html
+++ b/Learn More.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1200">
+    <meta name="viewport" content="width=1000, initial-scale=0.4">
     <title>Accommodations | Campus Collective</title>
     <link rel="icon" type="image/x-icon" href="Images/campus collective icon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap">
@@ -26,11 +26,12 @@
             background-attachment: fixed;
             animation: slideshow 42s infinite;
             padding-top: 100px;
-            /* Forces the body to maintain desktop width */
-            width: 1200px;
+            /* Slightly narrower container to make content appear larger */
+            width: 1000px; 
             margin: 0 auto;
         }
 
+        /* Background Slideshow */
         @keyframes slideshow {
             0%, 14.28% { background-image: url('Images/ump 1.jpg'); }
             14.29%, 28.56% { background-image: url('Images/ump 3.jpg'); }
@@ -49,66 +50,66 @@
             z-index: -1;
         }
 
-        /* --- NAVIGATION (Desktop Style) --- */
+        /* --- NAVIGATION --- */
         nav {
             position: fixed; top: 0; left: 50%; transform: translateX(-50%);
-            width: 1200px; height: 70px;
+            width: 1000px; height: 80px;
             background: rgba(0,0,0,0.95); backdrop-filter: blur(10px);
             display: flex; justify-content: space-between; align-items: center;
-            padding: 0 50px; z-index: 2000;
+            padding: 0 40px; z-index: 2000;
         }
 
-        .nav-logo-text { color: white; font-weight: 800; }
-        .nav-links { display: flex; list-style: none; gap: 15px; }
-        .nav-links li a { color: white; text-decoration: none; font-weight: 600; font-size: 0.85rem; }
+        .nav-logo-text { color: white; font-weight: 800; font-size: 1.5rem; }
+        .nav-links { display: flex; list-style: none; gap: 20px; }
+        .nav-links li a { color: white; text-decoration: none; font-weight: 600; font-size: 1.1rem; }
 
         /* --- SEARCH SECTION --- */
         .search-container {
-            width: 90%; max-width: 800px; margin: 0 auto 30px;
-            background: var(--glass); padding: 15px; border-radius: 50px;
+            width: 900px; margin: 0 auto 40px;
+            background: var(--glass); padding: 20px; border-radius: 60px;
             display: flex; box-shadow: 0 10px 25px rgba(0,0,0,0.3);
         }
 
-        #search-filter { border: none; background: transparent; padding: 0 15px; font-weight: bold; border-right: 1px solid #ddd; outline: none; }
-        #search-bar { flex: 1; border: none; padding: 0 20px; outline: none; font-size: 1rem; background: transparent; }
-        #search-btn { background: var(--accent); color: white; border: none; padding: 10px 25px; border-radius: 30px; cursor: pointer; font-weight: bold; }
+        #search-filter { border: none; background: transparent; padding: 0 20px; font-weight: bold; font-size: 1.1rem; border-right: 1px solid #ddd; outline: none; }
+        #search-bar { flex: 1; border: none; padding: 0 25px; outline: none; font-size: 1.2rem; background: transparent; }
+        #search-btn { background: var(--accent); color: white; border: none; padding: 15px 35px; border-radius: 40px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
 
-        /* --- GRID (Locked to 3 Columns) --- */
-        main { flex: 1; width: 1100px; margin: 0 auto; }
+        /* --- GRID --- */
+        main { flex: 1; width: 960px; margin: 0 auto; }
         
         .accommodation-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 25px;
-            padding-bottom: 50px;
+            gap: 30px;
+            padding-bottom: 60px;
         }
 
         .accommodation {
             background: var(--glass); border-radius: var(--radius);
             overflow: hidden; box-shadow: 0 15px 30px rgba(0,0,0,0.4);
-            display: flex;
-            flex-direction: column;
+            display: flex; flex-direction: column;
         }
 
-        .slideshow-container { position: relative; height: 220px; background: #eee; }
+        .slideshow-container { position: relative; height: 250px; background: #eee; }
         .slideshow-container img {
             width: 100%; height: 100%; object-fit: cover;
             position: absolute; opacity: 0; transition: 1s;
         }
         .slideshow-container img.active { opacity: 1; }
 
-        .details { padding: 20px; flex-grow: 1; display: flex; flex-direction: column; }
-        .details h2 { font-size: 1.2rem; margin-bottom: 10px; color: var(--primary); }
-        .details p { font-size: 0.9rem; margin-bottom: 8px; color: #444; }
+        /* INCREASED FONT SIZES FOR BETTER READABILITY */
+        .details { padding: 25px; flex-grow: 1; display: flex; flex-direction: column; }
+        .details h2 { font-size: 1.4rem; margin-bottom: 12px; color: var(--primary); }
+        .details p { font-size: 1.1rem; margin-bottom: 10px; color: #333; line-height: 1.4; }
         
-        .rating-stars { color: gold; font-size: 1.2rem; margin: 10px 0; }
+        .rating-stars { color: gold; font-size: 1.4rem; margin: 12px 0; }
         .more-details {
             width: 100%; background: var(--primary); color: white;
-            border: none; padding: 12px; border-radius: 10px;
-            font-weight: bold; cursor: pointer; margin-top: auto;
+            border: none; padding: 15px; border-radius: 12px;
+            font-weight: bold; cursor: pointer; margin-top: auto; font-size: 1.1rem;
         }
 
-        footer { background: rgba(0,0,0,0.9); color: white; text-align: center; padding: 20px; margin-top: auto; width: 1200px; }
+        footer { background: rgba(0,0,0,0.9); color: white; text-align: center; padding: 30px; margin-top: auto; width: 1000px; font-size: 1.1rem; }
     </style>
 </head>
 <body>
@@ -125,7 +126,7 @@
         </ul>
     </nav>
 
-    <h1 style="text-align: center; color: white; margin: 20px 0; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">Find Your Home</h1>
+    <h1 style="text-align: center; color: white; margin: 30px 0; font-size: 2.5rem; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">Find Your Home</h1>
 
     <div class="search-container">
         <select id="search-filter">
