fix: confirmened changes on pages

--- a/Learn More.html
+++ b/Learn More.html
@@ -120,6 +120,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="apply at uni.html">Apply@Universities</a></li>
             <li><a href="czra more about us.html">About Us</a></li>
+            <li><a href="version.html">Our-Vision</a></li>
             <li><a href="czra contact.html">Contact</a></li>
             <li><a href="choose login.html">Login</a></li>
             <li><a href="campus shop.html">Store</a></li>
