--- a/Agent profil.html
+++ b/Agent profil.html
@@ -156,7 +156,10 @@
                     <option value="not listed">Not Listed...</option>
                 </select>
                 <input type="text" id="manual-acc" name="manualAccommodation" placeholder="Type Accommodation Name" class="w-full p-2 border border-blue-500 rounded hidden">
-                <input type="date" name="moveInDate" required class="w-full p-2 border rounded">
+                <div class="date-container">
+  <label for="event-date">Move in Date:</label>
+  <input type="date" id="event-date" name="event-date">
+</div>
                 <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 rounded hover:bg-blue-700 transition">Submit Recruit</button>
             </form>
         </div>
