--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="czra more about us.html">About Us</a></li>
             <li><a href="czra contact.html">Contact Us</a></li>
+            <li><a href="version.html">Our-Vision</a></li>
             <li><a href="apply at uni.html">Apply@Universities</a></li>
             <li><a href="choose login.html">Login</a></li>
             <li><a href="campus shop.html">Campus Shop</a></li>
