fix: confiremed changes for version.html

--- a/version.html
+++ b/version.html
@@ -83,8 +83,10 @@
         <div class="nav-logo-text">CAMPUS COLLECTIVE</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="vision.html" style="color:var(--accent)">Vision</a></li>
+            <li><a href="czra contact.html">Contact Us</a></li>
             <li><a href="czra more about us.html">About Us</a></li>
+            <li><a href="apply at uni.html">Apply@Universities</a></li>
+            <li><a href="choose login.html">Login</a></li>
             <li><a href="Learn More.html">Accommodations</a></li>
             <li><a href="campus shop.html">Shop</a></li>
         </ul>
