fix: confirmed changes for pages

--- a/Learn More.html
+++ b/Learn More.html
@@ -217,6 +217,25 @@
                     <a href="vuyani.html"><button class="more-details">View</button></a>
                 </div>
             </div>
+            <div class="accommodation">
+                <div class="slideshow-container">
+                    <img src="Images/EGP holding main.jpeg" class="active">
+                    <img src="Images/EGP holding front.jpeg">
+                    <img src="Images/EGP holding sitting (1).jpeg">
+                    <img src="Images/EGP holding sitting (2).jpeg">
+                    <img src="Images/EGP Holdings kitch.jpeg">
+                    <img src="Images/EGP holdings bathroom.jpeg">
+                    <img src="Images/EGP holdings shariong room.jpeg">
+                    <img src="Images/EGP room2.jpeg">
+                </div>
+                <div class="details">
+                    <h2>Eagle Push Holdings</h2>
+                    <p><strong>Location:</strong> Stonehenge</p>
+                    <p><strong>Rooms:</strong> Singles and sharings</p>
+                    <div class="rating-stars">★★★★☆</div>
+                    <a href="EGP-holding.html"><button class="more-details">View</button></a>
+                </div>
+            </div>
 
             <div class="accommodation">
                 <div class="slideshow-container">
