fix: changed move in date feild

--- a/Agent profil.html
+++ b/Agent profil.html
@@ -157,8 +157,8 @@
                 </select>
                 <input type="text" id="manual-acc" name="manualAccommodation" placeholder="Type Accommodation Name" class="w-full p-2 border border-blue-500 rounded hidden">
                 <div class="date-container">
-  <label for="event-date">Move in Date:</label>
-  <input type="date" id="event-date" name="event-date">
+  <label for="moveInDate">Move In Date:</label>
+<input type="date" id="moveInDate" name="moveInDate" required>
 </div>
                 <button type="submit" class="w-full bg-blue-600 text-white font-bold py-3 rounded hover:bg-blue-700 transition">Submit Recruit</button>
             </form>
